objects/SBQQ__SummaryVariable__c.object
<CustomObject>
    <customHelpPage>SBQQ__SummaryVariableHelp</customHelpPage>
    <description>Variable that summarizes quote line items.</description>
    <fields>
        <fullName>SBQQ__AggregateField__c</fullName>
        <description>Quote Line field that&apos;s acted upon by the aggregate function.</description>
        <inlineHelpText>Quote Line field that&apos;s affected by the aggregate function.</inlineHelpText>
        <label>Aggregate Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AggregateFunction__c</fullName>
        <description>Aggregate function used to calculate this variable.</description>
        <inlineHelpText>Aggregate function used to calculate this variable.</inlineHelpText>
        <label>Aggregate Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CombineWith__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Another variable to compose with this variable to produce the final result.</description>
        <inlineHelpText>Another summary variable to compose with this summary variable if your condition is based on both results.</inlineHelpText>
        <label>Variable Element</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Composed By</relationshipLabel>
        <relationshipName>CombinedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompositeOperator__c</fullName>
        <description>Operator to use in composing this variable with another variable or value to produce final result used in rules.</description>
        <inlineHelpText>Specify how this variable should be composed with Variable Element or Value Element.</inlineHelpText>
        <label>Composite Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Subtract</fullName>
                </value>
                <value>
                    <fullName>Multiply</fullName>
                </value>
                <value>
                    <fullName>Divide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConstraintField__c</fullName>
        <inlineHelpText>If you want to limit records further based on a quote field, select the field that you want to match against the same field on the quote.</inlineHelpText>
        <label>Constraint Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterField__c</fullName>
        <inlineHelpText>Select the field to use when filtering items for inclusion in this summary variable.</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterValue__c</fullName>
        <inlineHelpText>Enter the value to match in this filter.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <inlineHelpText>Choose the operator to use in your filter.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Name of object being summarized.</description>
        <inlineHelpText>Select the object you want to aggregate.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ValueElement__c</fullName>
        <description>Value used by Composite Operator in composing final result for this variable.</description>
        <inlineHelpText>Enter value to use in composing operation.</inlineHelpText>
        <label>Value Element</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Summary Variable</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Scope__c</columns>
        <columns>SBQQ__AggregateField__c</columns>
        <columns>SBQQ__AggregateFunction__c</columns>
        <columns>SBQQ__Operator__c</columns>
        <columns>SBQQ__FilterField__c</columns>
        <columns>SBQQ__FilterValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summary Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>